--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <title>{{ title }}</title>
 
     <!-- Bootstrap -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,17 +18,17 @@
   </head>
   <body>
 
-		<div class="jumbotron">
-			<div class="container">
+    <div class="jumbotron">
+      <div class="container">
         <div class="titles">
           <h1><small>current:</small> <span id="current">My wonderful track</span></h1>
           <h2><small>next:</small> <span id="next">Next wonderful track</span></h2>
         </div>
-			</div>
-		</div>
+      </div>
+    </div>
 
-		<div class="container">
-			<div class="row text-center">
+    <div class="container">
+      <div class="row text-center">
 
         <div class="input-group input-group-lg">
           <span class="input-group-btn">
@@ -40,25 +40,25 @@
           </span>
         </div>
 
-			</div>
-		</div>
-		
-		<footer>
-			<div class="container">
-        <h1>{{ title }}</h1>
-				<p>{{ description }}</p>
-			</div>
-			<p><span class="glyphicon glyphicon-copyright-mark"></span>&nbsp;<a href="{{ authors_url }}">{{ author }}</a>&nbsp;·&nbsp;{{ license }}
-			&nbsp;·&nbsp;<span class="glyphicon glyphicon-console"></span>&nbsp;<a href="{{ url }}">GitHub</a></span>
-			&nbsp;·&nbsp;Made with <span class="glyphicon glyphicon-heart-empty"></span> and <a href="https://getbootstrap.com">Bootstrap</a></span>
-			</p>
-		</footer>
+      </div>
+    </div>
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" integrity="sha384-6ePHh72Rl3hKio4HiJ841psfsRJveeS+aLoaEf3BWfS+gTF0XdAqku2ka8VddikM" crossorigin="anonymous"></script>
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<!-- The main javascript -->
-		<script src="/static/js/dbusmediaweb.js"></script>
+    <footer>
+      <div class="container">
+        <h1>{{ title }}</h1>
+        <p>{{ description }}</p>
+      </div>
+      <p><span class="glyphicon glyphicon-copyright-mark"></span>&nbsp;<a href="{{ authors_url }}">{{ author }}</a>&nbsp;·&nbsp;{{ license }}
+      &nbsp;·&nbsp;<span class="glyphicon glyphicon-console"></span>&nbsp;<a href="{{ url }}">GitHub</a></span>
+      &nbsp;·&nbsp;Made with <span class="glyphicon glyphicon-heart-empty"></span> and <a href="https://getbootstrap.com">Bootstrap</a></span>
+      </p>
+    </footer>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" integrity="sha384-6ePHh72Rl3hKio4HiJ841psfsRJveeS+aLoaEf3BWfS+gTF0XdAqku2ka8VddikM" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- The main javascript -->
+    <script src="{{ static_url("js/mprisweb.js") }}"></script>
   </body>
 </html>
