Self discover websocket url
now this can be accessed remote :)

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,9 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <!-- The main javascript -->
+    <script>
+wsurl = "{{ reverse_url("websocket") }}";
+    </script>
     <script src="{{ static_url("js/mprisweb.js") }}"></script>
   </body>
 </html>
