Automatically reconnect websockets, display status
:)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,3 +44,13 @@ footer a:hover {
   background-size: 40% auto;
   transition: background 1s ease-in-out;
 }
+
+.statusbadge.statusbadge-problem {
+  fill: #B02727;
+}
+.statusbadge.statusbadge-progress {
+  fill: #B1AF27;
+}
+.statusbadge.statusbadge-ok {
+  fill: #279127;
+}
