--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
       data-bckgrnd-stop="{{ static_url("img/stop.svg") }}">
       <div class="container">
         <div class="titles">
-          <h1><small>current:</small> <span id="current">My wonderful track</span></h1>
-          <h2><small>next:</small> <span id="next">Next wonderful track</span></h2>
+          <h1 class="banner-scroll"><small class="hidden-xs">current:</small> <span id="current">My wonderful track</span></h1>
+          <h2 class="banner-scroll"><small>next:</small> <span id="next">Next wonderful track</span></h2>
         </div>
       </div>
     </div>
