Implemented MPRIS Player.Can... fields

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div id="mediabtns" class="container">
       <div class="row text-center">
 
         <div class="input-group input-group-lg">
