Hide next, if not available (or not implemented) :angel:

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <div class="titles">
           <h1 class="banner-scroll"><small class="hidden-xs">current:</small> <span id="current">My wonderful track</span></h1>
-          <h2 class="banner-scroll"><small>next:</small> <span id="next">Next wonderful track</span></h2>
+          <h2 id="next-heading" class="banner-scroll"><small>next:</small> <span id="next">Next wonderful track</span></h2>
         </div>
       </div>
     </div>
