--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,12 +39,21 @@ footer a:hover {
   opacity: 0;
 }
 
-.jumbotron#titlesjumbo {
+#titlesjumbo,
+div.artimagelayer {
   color: #333;
+  background-color: #eee;
   background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center 30%;
+  transition: background 1s ease-in-out;
+}
+.jumbotron#playstatuslayer {
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: auto 140%;
   background-position: 105% center;
   background-blend-mode: overlay;
-  background-size: auto 140%;
   transition: background 1s ease-in-out;
 }
 .jumbotron a,
