--- a/templates/index.html
+++ b/templates/index.html
@@ -18,19 +18,21 @@
   </head>
   <body>
 
-    <div id="titlesjumbo" class="jumbotron"
-      data-bckgrnd-play="{{ static_url("img/play.svg") }}"
-      data-bckgrnd-pause="{{ static_url("img/pause.svg") }}"
-      data-bckgrnd-stop="{{ static_url("img/stop.svg") }}">
-      <div class="container">
-        <div class="titles">
-          <h1 class="banner-scroll">
-            <small class="hidden-xs">current:</small>
-            <a data-toggle="collapse" href="#track-details" aria-expanded="false">
-              <span id="current" data-toggle="tooltip">My wonderful track</span>
-            </a>
-          </h1>
-          <h2 id="next-heading" class="banner-scroll"><small>next:</small> <span id="next">Next wonderful track</span></h2>
+    <div id="titlesjumbo" class="artimagelayer">
+      <div id="playstatuslayer" class="jumbotron"
+        data-bckgrnd-play="{{ static_url("img/play.svg") }}"
+        data-bckgrnd-pause="{{ static_url("img/pause.svg") }}"
+        data-bckgrnd-stop="{{ static_url("img/stop.svg") }}">
+        <div class="container">
+          <div class="titles">
+            <h1 class="banner-scroll">
+              <small class="hidden-xs">current:</small>
+              <a data-toggle="collapse" href="#track-details" aria-expanded="false">
+                <span id="current" data-toggle="tooltip">My wonderful track</span>
+              </a>
+            </h1>
+            <h2 id="next-heading" class="banner-scroll"><small>next:</small> <span id="next">Next wonderful track</span></h2>
+          </div>
         </div>
       </div>
     </div>
@@ -43,6 +45,7 @@
           <div class="well">
             <p><b>Artist:</b> A awesome artist</p>
           </div>
+          <p><i><img id="artimage" class="artimage img-thumbnail" src="" alt="No cover image"></i><p>
         </div>
 
       </div>
