--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <div id="titlesjumbo" class="artimagelayer">
+    <div id="artimagelayer">
       <div id="playstatuslayer" class="jumbotron"
         data-bckgrnd-play="{{ static_url("img/play.svg") }}"
         data-bckgrnd-pause="{{ static_url("img/pause.svg") }}"
