Split javascript in multiple files

--- a/templates/index.html
+++ b/templates/index.html
@@ -116,6 +116,8 @@ $(document).ready( function() {
   });
 });
     </script>
+    <script src="{{ static_url("js/helper.js") }}"></script>
+    <script src="{{ static_url("js/ui.js") }}"></script>
     <script src="{{ static_url("js/mprisweb.js") }}"></script>
   </body>
 </html>
