Fixed setup process
- (Re)changed project structure (as setup utils and tornado can handle
  static files outside the 'root' dir)
- using another magic module (which is well available via pip, but it is
  slow :( )
- fixed a css error

and tried to add setup.py without success :\

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,7 @@ div#artimagelayer,
 div#playstatuslayer {
   transition: height 1s ease-in-out, background 1s ease-in-out;
   background-repeat: no-repeat;
+  background-color: #eee;
 }
 div#artimagelayer {
   color: #333;
