--- a/templates/index.html
+++ b/templates/index.html
@@ -55,14 +55,27 @@
       <div class="row text-center">
 
         <div class="input-group input-group-lg">
-          <span class="input-group-btn">
+          <div class="input-group-btn">
             {% for key in ['backward', 'play', 'pause', 'stop', 'forward'] %}
             <button id="{{ key }}-btn" class="btn btn-default media-button" type="button" onclick="{{ key }}();">
               <span class="glyphicon glyphicon-{{ key }}"></span>
             </button>
             {% end for %}
-          </span>
+          </div>
         </div>
+
+      </div>
+    </div>
+
+    <div class="container volume-control">
+      <div class="row text-center">
+
+        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-1"></div>
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-10">
+          <label>Volume: <span class="volume-span">0%</span>
+            <input class="volume-bar" type="range" min="0.0" max="1.0" step="0.05"></label>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-1"></div>
 
       </div>
     </div>
