--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <link class="status-favicon" rel="icon" href="{{ static_url("img/stop.png") }}" type="image/png"
+      data-icon-play="{{ static_url("img/play.png") }}"
+      data-icon-pause="{{ static_url("img/pause.png") }}"
+      data-icon-stop="{{ static_url("img/stop.png") }}">
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
