--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,14 @@
       </div>
     </div>
 
+    <div class="overlay-bottom">
+      <button id="fullscreen-btn" class="btn btn-default fullscreen-button" type="button" onclick="toggleFullscreen();"
+        data-icon-fullscreen="glyphicon-resize-full"
+        data-icon-small="glyphicon-resize-small">
+        <span class="glyphicon  glyphicon-resize-full"></span>
+      </button>
+    </div>
+
     <footer>
       <div class="container">
         <h1>{{ title }}
